Fix whitespace around heading caused by margin

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -23,7 +23,7 @@ html {
 }
 
 h2 {
-  margin: 12px 0 12px 0;
+  padding: 12px 0 12px 0;
 }
 
 h2, h3 {
